Fixed issue where text wrapped in tab

--- a/src/sass/components/_tab-container.scss
+++ b/src/sass/components/_tab-container.scss
@@ -10,6 +10,8 @@
 
     border-right: 1px solid $primary-variant;
 
+    white-space: nowrap;
+
     span {
         margin-right: 10px;
     }
